Editando README, adjuntando imagen y haciedo cambios sutiles

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "email": "yesdev19@gmail.com"
     },
     "repository": {
-        "url": "https://github.com/yesomac/inspiration.git",
+        "url": "https://github.com/yesomac/MyThemes.git",
         "type": "git"
     },
     "publisher": "YesCode",
