New color theme

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "keywords": [
         "Theme",
         "SpaceGray",
-        "SpaceGraySober"
+        "SpaceGraySober",
+        "Space"
     ],
     "categories": [
         "Themes"
@@ -25,6 +26,11 @@
                 "label": "SpaceGraySober",
                 "uiTheme": "vs-dark",
                 "path": "./themes/SpaceGray-color-theme-sober.json"
+            },
+            {
+                "label": "Space",
+                "uiTheme": "vs-dark",
+                "path": "./themes/Space-color-theme.json"
             }
         ]
     },
